Attempts to fix task cards not showing up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@ body {
 
 .task-card {
   margin: 0 auto;
+  display: block;
+  visibility: visible;
+  position: relative;
 }
 
 .task-card:hover {
